--- a/log_configuration.json
+++ b/log_configuration.json
@@ -19,7 +19,7 @@
       },
       "console":{
         "class": "logging.StreamHandler",
-            "level": "DEBUG",
+            "level": "ERROR",
           "formatter": "simple"
           
       }
